SVG fixes.  Makes sure SVG doesn't overflow container.  And, fixes the icon alignment so that it matches in both Firefox and Chrome.

--- a/css/src/style.css
+++ b/css/src/style.css
@@ -211,7 +211,7 @@ a { text-decoration: underline; }
 	a:hover,
 	a:focus { text-decoration: underline; }
 
-a.has-svg { position: relative; display: inline-block; }
+a.has-svg { position: relative; display: block; }
 
 /* Lists */
 
